--- a/Styles/main.css
+++ b/Styles/main.css
@@ -1,4 +1,4 @@
-.minor h1, .minor h2 {
+.main h1:hover, .minor h1, .minor h2 {
   text-align: center;
   padding: 20px;
 }
@@ -9,6 +9,10 @@
 
 .main h1 {
   color: #ddd;
+}
+
+.main h1:hover {
+  text-decoration: underline;
 }
 
 .main h2 {
@@ -25,6 +29,7 @@
 
 .minor h1 {
   text-decoration: underline;
+  margin-bottom: calc(25px * 4);
 }
 
 .minor h2 {
